exports[`completedExist`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          No
        </strong>
         
        items
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
      <button
        className="clear-completed"
        onClick={[Function]}>
        Clear completed
      </button>
    </footer>
  </div>
</div>
`;

exports[`multiple remaining`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          2
        </strong>
         
        items
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`one remaining`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          1
        </strong>
         
        item
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`set to Active`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          No
        </strong>
         
        items
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`set to All, no completedExists, none remaining`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          No
        </strong>
         
        items
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;

exports[`set to Completed`] = `
<div
  className="todoapp">
  <div
    className="todo-list">
    <footer
      className="footer">
      <span
        className="todo-count">
        <strong>
          No
        </strong>
         
        items
         left
      </span>
      <ul
        className="filters">
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            All
          </a>
        </li>
        <li>
          <a
            className=""
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Active
          </a>
        </li>
        <li>
          <a
            className="selected"
            onClick={[Function]}
            style={
              Object {
                "cursor": "pointer",
              }
            }>
            Completed
          </a>
        </li>
      </ul>
    </footer>
  </div>
</div>
`;
